<resources>
    <string name="app_name">AndroidDatabindingTutorial</string>

    <string name="action_settings">Settings</string>
    <string name="title">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_domain">Domain</string>
    <string name="title_inputs">Your Input</string>
    <string name="username_result">Username goes here</string>
    <string name="password_result">Password goes here</string>
    <string-array name="auth_array">
        <item>Basic</item>
        <item>Windows</item>
    </string-array>
    <string name="msgLogin">You try to login with %s</string>
</resources>
