<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.mtag.androiddatabindingtutorial.LoginViewModel"/>
    </data>
<RelativeLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:animateLayoutChanges="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"
        android:text="@string/title"
        android:id="@+id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:id="@+id/tilUsername">

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="text|textNoSuggestions|textPersonName"
            android:text="@{viewModel.username}"
            app:addTextChangedListener="@{viewModel.onUsernameChanged}"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilPassword"
        android:layout_below="@+id/tilUsername">

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:text="@{viewModel.password}"
            android:inputType="textVisiblePassword"
            app:addTextChangedListener="@{viewModel.onPasswordChanged}"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spAuthMethod"
        android:layout_below="@+id/tilPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDomain"
        android:layout_below="@+id/spAuthMethod"
        android:visibility="gone"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/edDomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_domain"
            android:inputType="text"
            android:text="@{viewModel.domain}"
            app:addTextChangedListener="@{viewModel.onDomainChanged}"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_inputs_margin_top"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true"
        android:text="@string/title_inputs"
        android:id="@+id/tvInputsTitle"
        android:layout_below="@id/spAuthMethod"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hint_username"
        android:id="@+id/tvUsername"
        android:layout_below="@+id/tvInputsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@{viewModel.username}"
        android:id="@+id/tvUsernameValue"
        android:layout_below="@+id/tvInputsTitle"
        android:layout_alignRight="@+id/tvInputsTitle"
        android:layout_alignEnd="@+id/tvInputsTitle"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hint_password"
        android:id="@+id/tvPassword"
        android:layout_below="@+id/tvUsernameValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@{viewModel.password}"
        android:id="@+id/tvPasswordValue"
        android:layout_below="@+id/tvUsernameValue"
        android:layout_alignRight="@+id/tvInputsTitle"
        android:layout_alignEnd="@+id/tvInputsTitle"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hint_domain"
        android:id="@+id/tvDomain"
        android:layout_below="@+id/tvPasswordValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@{viewModel.domain}"
        android:id="@+id/tvDomainValue"
        android:layout_below="@+id/tvPasswordValue"
        android:layout_alignRight="@+id/tvInputsTitle"
        android:layout_alignEnd="@+id/tvInputsTitle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:enabled="@{viewModel.inputValid}"/>
</RelativeLayout>
</layout>